Updating underscore.string, no longer using mixin

--- a/js_tests/tests.html
+++ b/js_tests/tests.html
@@ -55,11 +55,7 @@
 
     <script type="text/javascript" src="../tardis/tardis_portal/static/js/lib/async.min.js"></script> 
     <script type="text/javascript" src="../node_modules/underscore/underscore-min.js"></script>
-    <script type="text/javascript" src="../node_modules/underscore.string/lib/underscore.string.js"></script>
-    <script type="text/javascript">
-      // Mixin Underscore.String to Underscore.js
-      _.mixin(_.string.exports());
-    </script>
+    <script type="text/javascript" src="../node_modules/underscore.string/dist/underscore.string.js"></script>
 
     <!-- Backbone.js -->
     <script type="text/javascript" src="../node_modules/backbone/backbone-min.js"></script>
