--- a/tardis/tardis_portal/jstemplates/tardis_portal/dataset_filter.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/dataset_filter.html
@@ -1,8 +1,8 @@
 <div class="form-horizontal">
   <div class="form-group" style="margin: 0; padding: 10px 0 5px 10px; border: 1px solid #DDDDDD;">
-    <div class="col-md-12" style="margin-left: 0; margin-bottom: 10px;">
+    <div class="col-lg-12" style="margin-left: 0; margin-bottom: 10px;">
       <input id="dataset-filter-text-{{cid}}" class="input-xlarge" type="text"
-          style="width: 95%; font-size: 120%;"
+          style="width: 95%; font-size: 80%;"
           placeholder="Just start typing to filter datasets based on descriptions"
           autocomplete="off"/>
     </div>
