--- a/tardis/tardis_portal/jstemplates/tardis_portal/license_selector.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/license_selector.html
@@ -1,19 +1,19 @@
 <div class="license-option form-group">
-  <div class="col-md-2 control-label">
+  <div class="col-lg-2 control-label">
     <input type="hidden" class="license-id" value="{{ id }}"/>
     <a class="use-button btn btn-primary" title="Use">
       Use
     </a>    
   </div>
-  <div class="col-md-10">
+  <div class="col-lg-10">
     <div class="row">
-      <div class="col-md-9">
+      <div class="col-lg-9">
         <h4 style="display: inline-block">
           <a target="_blank" href="{{ url }}">{{ name }}</a>
         </h4>
         <p>{{ internal_description }}</p>
       </div>
-      <span class="col-md-3">
+      <span class="col-lg-3">
         {{# image_url }}
         <img style="margin-left: auto; margin-right: auto"
              src="{{ image_url }}"/>
