Replacing badges (being phased out of Bootstrap) with labels Adding sprintf-js, because underscore.string's sprintf is deprecated Adding ESLint check for backbone-models.js Fixing underscore.string errors in experiment-tab.js following recent underscore.string upgrade.

--- a/js_tests/tests.html
+++ b/js_tests/tests.html
@@ -56,6 +56,7 @@
     <script type="text/javascript" src="../tardis/tardis_portal/static/js/lib/async.min.js"></script> 
     <script type="text/javascript" src="../node_modules/underscore/underscore-min.js"></script>
     <script type="text/javascript" src="../node_modules/underscore.string/dist/underscore.string.js"></script>
+    <script type="text/javascript" src="../node_modules/sprintf-js/dist/sprintf.min.js"></script>
 
     <!-- Backbone.js -->
     <script type="text/javascript" src="../node_modules/backbone/backbone-min.js"></script>
