--- a/tardis/tardis_portal/jstemplates/tardis_portal/dataset_tile.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/dataset_tile.html
@@ -3,7 +3,7 @@
     <i class="fa fa-folder-open"></i>
   </div>
   <br/>
-  <label class="dataset-download-box badge badge-info"
+  <label class="dataset-download-box label label-info"
          for="dataset-checkbox-{{id}}"
          title="Mark dataset for download">
     <i class="fa fa-download"></i>
