--- a/tardis/tardis_portal/jstemplates/tardis_portal/badges/public_access.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/badges/public_access.html
@@ -1,4 +1,4 @@
-<span class="badge {{^private}}badge-success{{/private}}"
+<span class="label label-default {{^private}}label-success{{/private}}"
       property="dc:rights"
       content="{{ title }}"
       title="{{ title }}">
