Display online status when page loads (if HSM app is enabled). Total number of files is displayed first, with a progress indicator, and then it's replaced with the number of online files (together with the total number of files) after an AJAX call.

--- a/tardis/tardis_portal/jstemplates/tardis_portal/badges/datafile_count.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/badges/datafile_count.html
@@ -1,4 +1,4 @@
-<span class="label label-default" title="{{ title }}">
+<span class="datafile-count-badge label label-default" title="{{ title }}">
   <i class="fa fa-file"></i>&nbsp;
   {{ count }}
 </span>
