refarctored to reflect changes related to moving js file

--- a/js_tests/tests.html
+++ b/js_tests/tests.html
@@ -49,11 +49,11 @@
      
     <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../node_modules/jquery-migrate/dist/jquery-migrate.min.js"></script>
-    <script type="text/javascript" src="../tardis/tardis_portal/static/js/lib/jquery.cookie.js"></script>
+    <script type="text/javascript" src="../assets/js/tardis_portal/jquery.cookie.js"></script>
 
     <script type="text/javascript" src="../node_modules/jquery-mockjax/dist/jquery.mockjax.js"></script>
 
-    <script type="text/javascript" src="../tardis/tardis_portal/static/js/lib/async.min.js"></script> 
+    <script type="text/javascript" src="../assets/js/tardis_portal/async.min.js"></script>
     <script type="text/javascript" src="../node_modules/underscore/underscore-min.js"></script>
     <script type="text/javascript" src="../node_modules/underscore.string/dist/underscore.string.js"></script>
     <script type="text/javascript" src="../node_modules/sprintf-js/dist/sprintf.min.js"></script>
@@ -68,7 +68,7 @@
     <script src="../node_modules/backbone-forms/distribution/templates/bootstrap3.js"></script>
 
     <!-- MyTardis's Backbone.js models -->
-    <script type="text/javascript" src="../tardis/tardis_portal/static/js/backbone-models.js"></script>
+    <script type="text/javascript" src="../assets/js/tardis_portal/backbone-models.js"></script>
 
     <!-- Mustache.js -->
     <script type="text/javascript" src="../node_modules/mustache/mustache.min.js"></script>
@@ -76,7 +76,7 @@
     <!-- django.mustache.js is provided by django-jstemplate, but we don't want to make -->
     <!-- the Javascript tests dependent on the virtualenv, so we have copied django.mustache.js into -->
     <!-- tardis/tardis_portal/static/js/lib/ along with other third party Javascript dependencies. -->
-    <script type="text/javascript" src="../tardis/tardis_portal/static/js/lib/django.mustache.js"></script>
+    <script type="text/javascript" src="../assets/js/lib/django.mustache.js"></script>
 
     <!-- Bootstrap -->
     <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
