--- a/js_tests/tests.html
+++ b/js_tests/tests.html
@@ -46,47 +46,15 @@
 
     <!-- Most of the dependencies below are normally loaded in -->
     <!-- tardis/tardis_portal/templates/tardis_portal/javascript_libraries.html -->
-     
-    <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="../node_modules/jquery-migrate/dist/jquery-migrate.min.js"></script>
-    <script type="text/javascript" src="../assets/js/tardis_portal/jquery.cookie.js"></script>
 
-    <script type="text/javascript" src="../node_modules/jquery-mockjax/dist/jquery.mockjax.js"></script>
-
-    <script type="text/javascript" src="../assets/js/tardis_portal/async.min.js"></script>
-    <script type="text/javascript" src="../node_modules/underscore/underscore-min.js"></script>
-    <script type="text/javascript" src="../node_modules/underscore.string/dist/underscore.string.js"></script>
-    <script type="text/javascript" src="../node_modules/sprintf-js/dist/sprintf.min.js"></script>
-
-    <!-- Backbone.js -->
-    <script type="text/javascript" src="../node_modules/backbone/backbone-min.js"></script>
-
-    <!-- Backbone Forms -->
-    <link rel="stylesheet" type="text/css"
-	    href="../node_modules/backbone-forms/distribution/templates/bootstrap3.css"/>
-    <script src="../node_modules/backbone-forms/distribution/backbone-forms.js"></script>
-    <script src="../node_modules/backbone-forms/distribution/templates/bootstrap3.js"></script>
-
-    <!-- MyTardis's Backbone.js models -->
-    <script type="text/javascript" src="../assets/js/tardis_portal/backbone-models.js"></script>
-
-    <!-- Mustache.js -->
-    <script type="text/javascript" src="../node_modules/mustache/mustache.min.js"></script>
-
-    <!-- django.mustache.js is provided by django-jstemplate, but we don't want to make -->
-    <!-- the Javascript tests dependent on the virtualenv, so we have copied django.mustache.js into -->
-    <!-- tardis/tardis_portal/static/js/lib/ along with other third party Javascript dependencies. -->
-    <script type="text/javascript" src="../assets/js/lib/django.mustache.js"></script>
-
-    <!-- Bootstrap -->
-    <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script type="text/javascript" src="../node_modules/bootstrap-3-typeahead/bootstrap3-typeahead.min.js"></script>
+    <script type="text/javascript" src="../assets/bundles/main.js"></script>
+    <script type="text/javascript" src="../assets/bundles/lib.js"></script>
+    <script type="text/javascript" src="../assets/bundles/tardis_portal.js"></script>
+    <script type="text/javascript" src="../assets/bundles/tardis_portal_view_experiment.js"></script>
+    <script type="text/javascript" src="../assets/bundles/tardis_portal_view_dataset.js"></script>
 
     <!-- MyTardis jQuery Tests -->
-
-    <script src="./jquery/main.test.js"></script>
-    <script src="./jquery/tardis_portal/ajax/share.test.js"></script>
-    <script src="./jquery/tardis_portal/view_experiment/experiment-tabs.test.js"></script>
+     <script type="text/javascript" src="../assets/bundles/test.js"></script>
 
 </body>
 </html>
