Fix some Font Awesome icons broken when we last upgraded Font Awesome

--- a/tardis/tardis_portal/jstemplates/tardis_portal/badges/public_access.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/badges/public_access.html
@@ -3,10 +3,10 @@
       content="{{ title }}"
       title="{{ title }}">
   {{#public}}
-  <i class="fa fa-eye-open"></i>
+  <i class="fa fa-eye"></i>
   {{/public}}
   {{^public}}
-  <i class="fa fa-eye-close"></i>
+  <i class="fa fa-eye-slash"></i>
   {{/public}}
   &nbsp;
   {{ label }}
