--- a/tardis/tardis_portal/jstemplates/tardis_portal/badges/dataset_count.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/badges/dataset_count.html
@@ -1,4 +1,4 @@
 <span class="badge badge-inverse" title="{{ title }}">
-  <i class="fa fa-folder-close"></i>&nbsp;
+  <i class="fa fa-folder"></i>&nbsp;
   {{ count }}
 </span>
