--- a/tardis/tardis_portal/jstemplates/tardis_portal/badges/last_updated_badge.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/badges/last_updated_badge.html
@@ -1,5 +1,5 @@
 <span class="badge badge-info" title="Last updated: {{ actual_time }}">
-  <i class="fa fa-time"></i>&nbsp;
+  <i class="fa fa-clock-o"></i>&nbsp;
   <span property="dc:modified"
         class="modified"
         content="{{ iso_time }}"
