--- a/js_tests/tests.html
+++ b/js_tests/tests.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>MyTardis JavaScript Tests</title>
     <link rel="stylesheet" href="../node_modules/qunit/qunit/qunit.css">
+    <script>
+        MyTardisJavascriptUnitTesting = true;
+    </script>
 </head>
 <body>
 
