--- a/tardis/tardis_portal/jstemplates/tardis_portal/badges/size.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/badges/size.html
@@ -1,3 +1,3 @@
-<span class="label label-default" title="{{ title }}">
+<span class="badge badge-secondary" title="{{ title }}">
   {{ label }}
 </span>
