adding badge-pill class to badges

--- a/tardis/tardis_portal/jstemplates/tardis_portal/badges/datafile_count.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/badges/datafile_count.html
@@ -1,4 +1,4 @@
-<span class="badge badge-secondary" title="{{ title }}">
+<span class="badge badge-pill badge-secondary" title="{{ title }}">
   <i class="fa fa-file"></i>&nbsp;
   {{ count }}
 </span>
