--- a/tardis/tardis_portal/jstemplates/tardis_portal/license_selector.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/license_selector.html
@@ -13,7 +13,7 @@
         </h4>
         <p>{{ internal_description }}</p>
       </div>
-      <span class="col-md-3">
+      <div class="col-md-3">
         {{# image_url }}
         <img style="margin-left: auto; margin-right: auto"
              src="{{ image_url }}"/>
