removing badge pill class

--- a/tardis/tardis_portal/jstemplates/tardis_portal/badges/last_updated_badge.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/badges/last_updated_badge.html
@@ -1,4 +1,4 @@
-<span class="badge badge-pill badge-info" title="Last updated: {{ actual_time }}">
+<span class="badge badge-info" title="Last updated: {{ actual_time }}">
   <i class="fa fa-clock-o"></i>&nbsp;
   <span property="dc:modified"
         class="modified"
