Changes to button styles to make them more consistent and to reduce the glare from over-use of btn-primary which is very bright in Bootstrap 4.
Avoid using btn-warning, because none of our button actions relate to warnings
and this style is more warning-like in Boostrap 4 - black text instead of white.

Use less btn-primary styles.  Use btn-primary mainly for Submit buttons.

Use btn-outline-secondary for most miscellaneous buttons.

Use nav-tabs instead of nav-pills (which looks like btn-primary).

Replace btn-xs with btn-sm. btn-xs doesn't exist in Boostrap 4.

Don't use btn-default which doesn't exist in Bootstrap 4.

Don't use an anchor inside a button element. Use one or the other.

--- a/tardis/tardis_portal/jstemplates/tardis_portal/license_selector.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/license_selector.html
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col-md-2 control-label">
       <input type="hidden" class="license-id" value="{{ id }}"/>
-        <a class="use-button btn btn-primary" title="Use">
+        <button type="button" class="use-button btn btn-outline-secondary" title="Use">
           Use
-        </a>
+        </button>
     </div>
     <div class="col-md-10">
       <div class="row">
