Get rid of django-bootstrap-form which is not compatible with Bootstrap 4

--- a/tardis/tardis_portal/jstemplates/tardis_portal/license_selector.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/license_selector.html
@@ -1,8 +1,8 @@
 <div class="license-option form-group">
   <div class="row">
-    <div class="col-md-2 control-label">
+    <div class="col-md-2">
       <input type="hidden" class="license-id" value="{{ id }}"/>
-        <button type="button" class="use-button btn btn-outline-secondary" title="Use">
+        <button type="button" class="use-button btn btn-info" title="Use">
           Use
         </button>
     </div>
