Some style changes. Reduce opacity of folder icons. Use black hyperlinks instead of default blue color. Use badge-info unless there's a good reason to use badge-secondary. Reduce use of the <strong> tag. Add some icons.

--- a/tardis/tardis_portal/jstemplates/tardis_portal/badges/experiment_count.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/badges/experiment_count.html
@@ -1,4 +1,4 @@
-<span class="badge badge-secondary" title="{{ title }}">
+<span class="badge badge-info" title="{{ title }}">
   <i class="fa fa-cogs"></i>&nbsp;
   {{ count }}
 </span>
