--- a/tardis/tardis_portal/jstemplates/tardis_portal/dataset_tile.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/dataset_tile.html
@@ -1,7 +1,7 @@
 <div class="card-body">
   <div class="float-left" style="margin-right: 10px">
     <div style="text-align: center; font-size: 32px">
-      <i class="fa fa-folder-open"></i>
+      <i class="fa fa-folder-open o-6"></i>
     </div>
     <br/>
     <label class="dataset-download-box label label-info"
