--- a/tardis/tardis_portal/jstemplates/tardis_portal/badges/dataset_count.html
+++ b/tardis/tardis_portal/jstemplates/tardis_portal/badges/dataset_count.html
@@ -1,4 +1,4 @@
-<span class="badge badge-secondary" title="{{ title }}">
+<span class="badge badge-info" title="{{ title }}">
   <i class="fa fa-folder"></i>&nbsp;
   {{ count }}
 </span>
